Populating home page try 2

--- a/index.qmd
+++ b/index.qmd
@@ -19,14 +19,16 @@ Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovatin
 
 ## Education
 
-University of California, San Diego | San Diego, CA
-PhD in Mathematics | Sept 2011 - June 2015
+University of California, Los Angeles | Los Angeles, CA
+Bachelor of Science, Double Major: Mathematics of Computation,
+Statistics and Data Science | Expected December 2025
 
-Macalester College | St. Paul, MN
-B.A in Economics | Sept 2007 - June 2011
+Las Positas College | Livermore, CA
+Associate of Science, Computer Science (Pending),
+Associate of Science, Mathematics | August 2023
 
 ## Experience
 
-Wengo Analytics | Head Data Scientist | April 2018 - present
+UCLA Football Athletic Performance | Project Manager and Lead Student Data Analyst | August 2024 - Present
 
-GeoScynce | Chief Analyst | Spet 2012 - April 2018
+UCLA Football | Student Equipment Manager | March 2024 - Present
