Testing Project Lists

--- a/project_3.qmd
+++ b/project_3.qmd
@@ -1,5 +1,7 @@
 ---
-title: "project_3"
+title: "Cerebral Injuries in Football Paper"
+image: LinkedIn_Photo.png
 format: html
 ---
 
+## Description:
