--- a/projects/project_3.qmd
+++ b/projects/project_3.qmd
@@ -3,7 +3,7 @@ title: "Cerebral Injuries in Football Paper"
 image: LinkedIn_Photo.png
 ---
 
-## Description:
+## <a href="https://docs.google.com/document/u/1/d/e/2PACX-1vSZl0bz00PZqC_zfQvmCripw_T-oIS_Dfdz0WWWDVfAYrnFFigS8bhdu3fkErbYVWfFcZ-YQGwY010a/pub">Project</a>
 
 - Investigated existing literature on biological impacts of cerebral injuries in football & how advancements in technology assist with medical diagnosis & treatment
 
