--- a/projects/project_3.qmd
+++ b/projects/project_3.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Cerebral Injuries in Football Paper"
-image: LinkedIn_Photo.png
+image: Project3_png.png
 ---
 
 ## <a href="https://docs.google.com/document/u/1/d/e/2PACX-1vSZl0bz00PZqC_zfQvmCripw_T-oIS_Dfdz0WWWDVfAYrnFFigS8bhdu3fkErbYVWfFcZ-YQGwY010a/pub">Project</a>
